--- a/ContainerInsideContainer/Containerfile
+++ b/ContainerInsideContainer/Containerfile
@@ -1,3 +1,3 @@
 FROM registry.access.redhat.com/ubi8
-RUN yum install -y  podman openssh-clients net-tools iproute iputils bind-utils wget curl && yum clean all
+RUN yum install -y  git podman openssh-clients net-tools iproute iputils bind-utils wget curl && yum clean all
 CMD /bin/bash
